# Stereo_DSO_ROS

./: README.md
stereo_dso/: CMakeLists.txt  package.xml
stereo_dso/src/FullSystem/: FullSystem.cpp
stereo_dso/src/IOWrapper/: Output3DWrapper.h
stereo_dso/src/IOWrapper/Pangolin/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  KeyFrameDisplay.cpp  KeyFrameDisplay.h  PangolinDSOViewer.cpp  PangolinDSOViewer.h
stereo_dso/src/OptimizationBackend/: EnergyFunctionalStructs.cpp  MatrixAccumulators.h
stereo_dso/src/util/: settings.cpp  settings.h
stereo_dso_ros/: CMakeLists.txt  package.xml  stero_dso_ros.rviz
stereo_dso_ros/src/: stereo_dso_ros.cpp
